Se realiza el proyecto tal cual como el profesor indica en el curso, el resultado es identico a la pagina de google, se aprendio a utilizar herramientas del dev tool, excelente resultado, excelente curso

--- a/index.html
+++ b/index.html
@@ -9,32 +9,58 @@
 </head>
 <body>
     <header>
-        <ul class="menu-header">
-            <li class="menu-button"><a href="#">Gmail</a></li>
-            <li class="menu-button"><a href="#">Images</a></li>
-            <li class="menu-button"><a href="#">log-in</a></li>
-            <li class="menu-button"><a href="#"><img src="./img/skull-gde3f928ce_640.png" alt="imagen de usuario"></a></li>
-        </ul>
+        <nav>
+            <ul class="nav-right-section">
+                <li><a href="#">Gmail</a></li>
+                <li><a href="#">Images</a></li>
+                <li class="menu-icon"><a href="#"  class="menu-icon"></a></li>
+                <li><a href="#"><img src="https://lh3.googleusercontent.com/ogw/AAEL6sixYEL6F2kQL9iwflb6HdmQJNEfp8LhA3iAFGjBFA=s64-c-mo" alt=""></a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <figure>
-            <img src="./img/google-logo.svg" alt="logo de pagina">
-        </figure>
-        <section>
-            <form action="">
-                <label for="buscador">
-                    <span></span>
-                    <input type="text" name="Search" id="buscador">
-                </label>
-                <button>Buscar</button>
-            </form>
+        <section class="main-logo">
+            <img src="./img/google-logo.svg" alt="">
+        </section>
+        <section class="main-input">
+            <div class="main-input-container">
+                <span class="search-icon">
+
+                </span>
+                <input type="text">
+                <a class="micro-icon" href="#"></a>
+            </div>
+        </section>
+        <section class="main-buttons">
+            <div><button>Buscar con google</button></div>
+            <div><button>Me siento con suerte</button></div>
         </section>
     </main>
     <footer>
-        <ul class="menu-footer">
-            <li class="menu-button"><a href="">Contact us</a></li>
-            <li class="menu-button"><a href="">Terms and condition</a></li>
-            <li class="menu-button"><a href="">About us</a></li>
+        <ul class="footer-left">
+            <li>
+                <a href="#">Publicidad</a>
+            </li>
+            <li>
+                <a href="#">Negocios</a>
+            </li>
+            <li>
+                <a href="#">Acerca de</a>
+            </li>
+            <li>
+                <a href="#">Como funciona la busqueda</a>
+            </li>
+        </ul>
+        <ul class="footer-right">
+            <li>
+                <a href="#">Privacidad</a>
+            </li>
+            <li>
+                <a href="#">Condiciones</a>
+            </li>
+            <li>
+                <a href="#">Preferencias</a>
+            </li>
         </ul>
     </footer>
 </body>
